# WaveMind

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  resource.rc  vcpkg.json
src/: app_state.h  audio_capture.cpp  audio_capture.h  image_loader.cpp  image_loader.h  key_store.cpp  key_store.h  main.cpp  media_decoder.cpp  media_decoder.h  resource.h  transcriber.cpp  transcriber.h  vad_chunker.cpp  vad_chunker.h  wav.cpp  wav.h
